clusters/hetzner/apps/security/authentik/app/ingress.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authentik
  namespace: istio-system
spec:
  gateways:
    - cluster-gateway
  hosts:
    - id.behn.dev
    - id.hetzner.k8s.behn.dev
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: authentik.security.svc.cluster.local
            port:
              number: 80
